apply plugin: 'com.android.application'
apply plugin: "com.github.spotbugs"
apply plugin: 'checkstyle'
apply plugin: 'pmd'

sourceSets {
    // we define `main` sourceSet here, so SpotBugs Gradle Plugin generates `spotbugsMain` task
    main {
        java.srcDirs = ['src/main/java']
    }
}

spotbugs {
    toolVersion = '4.1.4'
    ignoreFailures = true
    effort = "max"
    reportLevel = "high"
}

checkstyle {
    toolVersion = '8.20'
}

pmd {
    ignoreFailures true
}

task checkstyle(type: Checkstyle) {
    configFile = rootProject.file("config/checkstyle/checkstyle.xml")
    //configProperties.checkstyleSuppressionsPath = file("$configPath/checkstyle/suppressions.xml").absolutePath
    source 'src'
    include '**/*.java'
    exclude '**/gen/**', 'androidTest/**', 'test/**'
    reports {
        html.enabled = true
        xml.enabled = false
        html {
            destination file("$project.buildDir/reports/checkstyle/checkstyle.html")
        }
    }

    classpath = files()
}

android {
    compileSdkVersion 30
    buildToolsVersion '30.0.2'
    defaultConfig {
        applicationId "org.mate"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }

    compileOptions {
        // Flag to enable support for the new language APIs
        coreLibraryDesugaringEnabled true
        // Sets Java compatibility to Java 8
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'

            debug {
                debuggable true
            }

        }
    }

    lintOptions {
        abortOnError true
        xmlReport false
        htmlReport true
        htmlOutput file("$project.buildDir/reports/lint/lint.html")
    }
}

dependencies {
    androidTestImplementation project(path: ':app')
    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1'
    runtimeOnly group: 'androidx.appcompat', name: 'appcompat', version: '1.3.1'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.1")
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.6.1'
    implementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
    implementation 'com.android.support.test:runner:1.0.2'
    implementation files('libs/xstream-1.4.11-java7.jar')
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
}
